Added variables for the quiz and some basic text and styling just to get a solid footing

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <nav>
+        <a href="" id="scoreBtn">View Highscores</a>
+
+        <p id="timer">Time:</p>
+    </nav>
+    <section id="main" class="">
+        <h2 class="justify-content-center" id="heading">Coding Quiz Challenge</h2>
+        <p id="writing">Try to answer the following codeing-related questions within the time limit. Keep in mind that incorrect answers will penalize your Score/Time by 10 Seconds!</p>
+        <button id="startBtn">Start Quiz</button>
+        <ul id="answers">
+        </ul>
+    </section>
     
 </body>
 
@@ -18,3 +30,4 @@
 
 <script src="/assets/js/script.js"></script>
 </html>
+
