--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p id="timer">Time:</p>
     </nav>
     <section id="main" class="">
-        <h2 class="justify-content-center" id="heading">Coding Quiz Challenge</h2>
+        <h2 id="heading">Coding Quiz Challenge</h2>
         <p id="writing">Try to answer the following codeing-related questions within the time limit. Keep in mind that incorrect answers will penalize your Score/Time by 10 Seconds!</p>
         <button id="startBtn">Start Quiz</button>
         <ul id="answers">
