--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Quiz!</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <nav>
-        <a href="" id="scoreBtn">View Highscores</a>
+        <span><a href="" id="scoreBtn">View Highscores</a></span>
 
-        <p id="timer">Time:</p>
+        <span><p id="timer">Time: 0</p></span>
     </nav>
     <section id="main" class="">
         <h2 id="heading">Coding Quiz Challenge</h2>
