Added the beginning of a high scores page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <span><p id="timer">Time: 0</p></span>
     </nav>
     <section id="main" class="">
-        <h2 id="heading">Coding Quiz Challenge</h2>
-        <p id="writing">Try to answer the following coding-related questions within the time limit. Keep in mind that incorrect answers will penalize your Score/Time by 10 Seconds!</p>
+        <h2 id="heading"></h2>
+        <p id="writing"></p>
         <button id="startBtn">Start Quiz</button>
         <ul id="answers">
         </ul>
