Made a bunch of changes in order to get the quiz working in every aspect including all the various ways you could jump to different screens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <span><a href="" id="scoreBtn">View Highscores</a></span>
+        <span><button href="" id="scoreBtn">View Highscores</button></span>
 
         <span><p id="timer">Time: 0</p></span>
     </nav>
@@ -19,8 +19,6 @@
         <h2 id="heading"></h2>
         <p id="writing"></p>
         <button id="startBtn">Start Quiz</button>
-        <ul id="answers">
-        </ul>
     </section>
     
 </body>
